--- a/modules/core/comment/app/views/comments/_last.html.haml
+++ b/modules/core/comment/app/views/comments/_last.html.haml
@@ -8,4 +8,4 @@
 
 .comments_last
   = html_user_info(comment.user, extra_row)
-  .comment_body= comment.body
+  .comment_body= comment.body.html_safe
