--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -5,8 +5,7 @@
 %title= h(title_from_breadcrumbs || SiteConf.instance.title)
 %meta{:name => 'keywords', :content => CONF[:keywords]}
 
-= javascript_include_tag('http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js')
-= javascript_include_tag('application')  # Dynamic thus does not exist on disk thus cannot be cached
+= javascript_include_tag(:defaults)
 
 = stylesheet_link_tag('application', :media => 'all')
 
