--- a/modules/standard/google_map/app/views/google_map_block/show.html.haml
+++ b/modules/standard/google_map/app/views/google_map_block/show.html.haml
@@ -3,8 +3,7 @@
   %head
     %title= h(@block.title)
 
-    -# Should be the same as application.html.haml to reuse the cache
-    = javascript_include_tag('jquery', 'jquery-ui', 'jrails', 'swfobject', :cache => 'all')
+    = javascript_include_tag(:defaults)
 
     -# Make the document body take up the full screen
     %style{:type => 'text/css'}
